# amazon-bedrock-agents-healthcare-lifesciences_clone

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Infra_cfn.yaml  README.md  THIRD-PARTY.txt
agents_catalog/28-Research-agent-biomni-gateway-tools/: .gitignore  README.md  app.py  app_oauth.py  dev-requirements.txt  main.py  pyproject.toml
agents_catalog/28-Research-agent-biomni-gateway-tools/agent/: requirements.txt
agents_catalog/28-Research-agent-biomni-gateway-tools/agent/agent_config/: access_token.py  agent.py  context.py  memory_hook_provider.py  (+2 more)
agents_catalog/28-Research-agent-biomni-gateway-tools/app_modules/: auth.py  chat.py  main.py  styles.py  utils.py
agents_catalog/28-Research-agent-biomni-gateway-tools/prerequisite/: agentcore.yaml  cognito.yaml  create_lambda_zip.py  infrastructure.yaml  knowledge_base.py  prereqs_config.yaml
agents_catalog/28-Research-agent-biomni-gateway-tools/scripts/: .gitignore  agentcore_agent_runtime.py  cleanup.sh  cognito_credentials_provider.py  deploy_agentruntime.py  list_ssm_parameters.sh  prereq.sh  store_api_specs.py  utils.py
agents_catalog/28-Research-agent-biomni-gateway-tools/tests/: test_agent_iam.py  test_agent_locally.py  test_agent_oauth.py  test_gateway.py  test_literature_lambda.py  test_memory.py
agents_catalog/31-drug-label-automated-reasoning/: .gitignore  README.md  app.py  pyproject.toml
agents_catalog/31-drug-label-automated-reasoning/data/: anydrug.md
agents_catalog/31-drug-label-automated-reasoning/infrastructure/: bedrock-guardrails.yaml  container.yaml  kb_agent.yaml  kendra-genai-index.yaml  poisoned_kb_agent.yaml  root.yaml
agents_catalog/31-drug-label-automated-reasoning/scripts/: deploy.sh  destroy.sh  sync_kendra_data.py
(+441 files in other folders)
