[project]
name = "28-research-agent-biomni-gateway-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "arxiv>=2.2.0",
    "aws-opentelemetry-distro>=0.12.1",
    "beautifulsoup4>=4.14.2",
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "black>=23.0.0",
    "boto3>=1.39.7",
    "botocore>=1.39.7",
    "click>=8.2.1",
    "defusedxml>=0.7.1",
    "fastmcp>=2.12.5",
    "flake8>=6.0.0",
    "googlesearch-python>=1.3.0",
    "mcp>=1.16.0",
    "mypy>=1.0.0",
    "opensearch-py>=3.0.0",
    "pandas>=2.3.1",
    "pathlib2>=2.3.7",
    "pip>=25.2",
    "pre-commit>=3.0.0",
    "pydantic>=2.12.3",
    "pyjwt>=2.10.1",
    "pymed>=0.8.9",
    "pypdf2>=3.0.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "requests-aws4auth>=1.3.1",
    "retrying>=1.4.0",
    "scholarly>=1.7.11",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
    "streamlit>=1.47.0",
    "streamlit-cookies-controller>=0.0.4",
    "uv>=0.9.3",
]
