[project]
name = "docs-ar-demo"
version = "0.1.0"
description = "Use Amazon Bedrock Guardrails Automated Reasoning to defend against RAG poisoning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.7",
    "boto3>=1.40.45",
    "strands-agents>=1.10.0",
    "streamlit>=1.50.0",
]
